<resources>
    <string name="app_name">SafePoint</string>
    <string name="eUserName">Username</string>
    <string name="ePassword">Password</string>
    <string name="eFitness">Your Fitness Level 1-10</string>
    <string name="ePhone">Phone Number</string>
    <string name="eAddress">Address</string>
    <string name="eEmail">Email</string>
    <string name="eBirthDate">Birth Date</string>
    <string name="title_activity_maps">Map</string>
    <string name="im_safe">Im Safe!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="notregistered">not registered yet?​</string>
    <string name="age">Age</string>
    <string name="registration">Registration</string>
    <string name="personal_identity">Personal Identity</string>
    <string name="i_have_a_mobility_difficulty">I have a mobility difficulty</string>
    <string name="guest">Continue as guest</string>
    <string name="ranOnce">ran_once</string>
    <string name="refresh_token">refresh_token</string>
    <string name="user_settings">user_settings</string>
    <string name="access_token">access_token</string>
    <string name="expires_in">expires_in</string>
    <string name="geofences">geofences</string>
    <string name="geofence_list">geofence_list</string>
    <string name="fcm_token">fcm_token</string>
    <string name="selected_shelter">selected_shelter</string>
    <string name="lastAlert">lastAlert</string>
</resources>
